first commit, added buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Music Poject</title>
 </head>
 <body>
+	<form>
+	<button id = "playButton" onclick="playSong()"></button>
+	<button id = "pauseButton" onclick="pauseSong()"></button>
+</form>
 
 </body>
 </html>
