adding buttons and the loggic

--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
 
+	<h1>Stuff</h1>
+
+	<audio id="myAudio">
+	  <source src="FreeTimeJazz.mp3" type="audio/mp3">
+	  <!-- <source src="" type="audio/mp3"> -->
+	  Your browser does not support the audio element. -->
+	</audio>
+
+
+	<button id = "playButton" type = "button" > Play</button>
+	<button id = "stopButton" type = "button"  > Stop</button>
+	<button id = "nextButton" type = "button" > Next</button>
+	<button id = "backButton" type = "button" > previous</button>
+
+
+	<script type="text/javascript" src = "script.js"></script>
+
 </body>
 </html>
