--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 <html>
 <head>
 	<title>Music Poject</title>
+	<link rel="stylesheet" type="text/css" href="boomBox.css">
 </head>
 <body>
 
-	<h1>Stuff</h1>
+	
 
 	<audio id="myAudio">
 	  <source src="FreeTimeJazz.mp3" type="audio/mp3">
-	  <!-- <source src="" type="audio/mp3"> -->
-	  Your browser does not support the audio element. -->
+	  
 	</audio>
 
-
-	<button id = "playButton" type = "button" > Play</button>
-	<button id = "stopButton" type = "button"  > Stop</button>
-	<button id = "nextButton" type = "button" > Next</button>
-	<button id = "backButton" type = "button" > previous</button>
-
+	<img src="https://thumbs.gfycat.com/PerkyRealFrilledlizard-size_restricted.gif"> <br>
+	<div id= "buttonDiv">
+		<button id = "playButton" type = "button" > Play</button>
+		<button id = "stopButton" type = "button"  > Stop</button>
+		<button id = "nextButton" type = "button" > Next</button>
+		<button id = "backButton" type = "button" > previous</button>
+	</div>
 
 	<script type="text/javascript" src = "script.js"></script>
 
